fix broken style for nested menu items

--- a/public/sass/dsa/_header.scss
+++ b/public/sass/dsa/_header.scss
@@ -39,7 +39,7 @@ $lbluegray: #4689C2;
     border-width: 0px;
 }
 
-.nav.dashnav-action-icons > li a {
+.nav.dashnav-action-icons > li > a {
     color: #0073E0;
     text-decoration: none;
     padding-top: 27px;
